Correciones de enconding en servicio de diagnótico y comprobaciones de conectividad